gcc/testsuite/g++.dg/ext/attr-unavailable-5.C
/* Test __attribute__ ((unavailable)) */
/* { dg-do compile } */
/* { dg-options "" } */

struct Foo { int i; } __attribute__ ((unavailable));
void foo() { Foo f; }		// { dg-error "unavailable" }
